--- a/links.html
+++ b/links.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Links</h1>
-    <a href="fiftyshadesofwhy.github.io/design3a/poems/index1">Poem 1</a>
-    <a href="fiftyshadesofwhy.github.io/design3a/poems/index2">Poem 2</a>
-    <a href="fiftyshadesofwhy.github.io/design3a/poems/index3">Poem 3</a>
+    <a href="poems/index1">Poem 1</a>
+    <a href="poems/index2">Poem 2</a>
+    <a href="poems/index3">Poem 3</a>
 </body>
 </html>
