--- a/ordinaryextraordinary/main.html
+++ b/ordinaryextraordinary/main.html
@@ -5,6 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+    <title>Chalk</title>
   </head>
   <body>
   <script async src=https://cdn.JsDelivr.net/npm/p5></script>
